# code_intel

./: CLAUDE.md  Cargo.toml  README.md  code_intel_service_design.md  test_mcp.sh  test_mcp_simple.py  update_mcp.sh
src/: client.rs  graph.rs  indexer.rs  main.rs  mcp.rs  mcp_client.rs  parser.rs  protocol.rs  server.rs  web_ui.rs
test_project/: Cargo.toml  types.rs
test_project/src/: calculator.rs  lib.rs  main.rs  test_new_function.rs  utils.rs
