[package]
name = "code_intel"
version = "0.1.0"
edition = "2024"

[dependencies]
# コードパース用
syn = { version = "2.0", features = ["full", "extra-traits"] }

# 非同期ランタイム
tokio = { version = "1.0", features = ["full"] }

# JSON-RPC & シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ファイルシステム（将来使用）
notify = "6.0"

# quote macro for syn
quote = "1.0"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# 時刻処理
chrono = { version = "0.4", features = ["serde"] }

# Web UI
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.0"
